# seer

./: .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  Compose.Dockerfile  DI.md  Dockerfile  Dockerfile-local  LICENSE  LICENSE.md  Lightweight.Dockerfile  Makefile  README.md  api_config.yaml  asyncworker.sh  celerybeat.sh  celeryworker.sh  cloudbuild.staging.yml  cloudbuild.yaml  codecov.yml  decrypt-vcr.sh  docker-compose-cache.json  docker-compose.ci.yml  docker-compose.cuda.yml  docker-compose.staging.yml  docker-compose.yml  encrypt-vcr.sh  envoy.yaml  flower.sh  grpcserver.sh  gunicorn.sh  model.requirements.txt  prophet_detector.py  pyproject.toml  requirements-constraints.txt  requirements-precommit.txt  requirements.txt  setup.cfg  (+3 more)
.cursor/rules/: tests.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cleanup.yml  commit-schemas.yml  enforce-license-compliance.yml  linting.yml  relevant-warnings.yml  test-app.yml  test-branches.yml  test-prs.yml  tests.yml  validate-pipelines.yml
benchmark/: locustfile.py
certs/: setup-certs.sh
certs/ca/: ca-csr.json
certs/client/: client-config.json  client.json
certs/server/: server-config.json  server.json
devenv/: config.ini  sync.py
docker/: Dockerfile  cloudbuild.yaml  main.py  prophet_detector.py  prophet_model.py  requirements.txt  seer.py  service.yaml  settings.py
docker/tests/: test_prophet_detector.py  test_seer.py
dumps/: planning_output.json  problem_discovery.json  problem_discovery_output.json
gocd/environments/: env.yaml
gocd/pipelines/: demo.sh  demo.yaml  seer-experimental.yaml  seer.yaml
gocd/templates/: seer.jsonnet
models/: .gitignore
notebooks/: create_dataset.ipynb  create_indices.ipynb  langsmith.ipynb  load_indices.ipynb  open_source_repos.ipynb  run_eval.ipynb  test_codebase.ipynb  v2.ipynb
protobuf-adaptors/: requirements.txt  setup.py
protos/: pyproject.toml  requirements.txt  setup.py
scripts/: decrypt-vcr.sh  encrypt-vcr.sh  encrypt.py  requirements.txt  vcr-common.sh
src/Kats/: test_requirements.txt
src/celery_app/: app.py  config.py  models.py  monitor.py  tasks.py
src/kats/: consts.py
src/migrations/: ad_alert_ids_to_source_ids_2025_06_02.csv  alembic.ini  env.py
src/seer/: app.py  bootup.py  celery.py  celery_app.py  configuration.py  db.py  dependency_injection.py  env.py  events.py  exceptions.py  generate_schemas.py  generator.py  grpc.py  grpc_helpers.py  (+17 more)
tests/: conftest.py  generators.py  test_celery.py  test_cusum_detection.py  test_database_init.py  test_db_seer_project_preferences.py  test_dependency_injection.py  test_events.py  test_find_trends.py  test_gcloud_credentials.json  test_generator.py  test_injector.py  test_json_api.py  test_langfuse.py  test_llm_blacklist.py  test_migrations.py  test_monitor.py  test_process_request.py  test_prophet_detector.py  test_ripgrep_search.py  test_root_cause_analysis_component.py  test_root_cause_component.py  test_rpc.py  test_seer.py  test_severity_inference.py  test_tasks.py  utils.py
torchserve/: model-config.json
(+746 files in other folders)
