[build-system]
    requires = ["setuptools>=61.0.0", "wheel>=0.45.1"]
    build-backend = "setuptools.build_meta"

[tool.black]
    # File filtering is taken care of in pre-commit.
    line-length = 100
    target-version = ['py311']

[tool.isort]
    profile = "black"
    line_length = 100
    lines_between_sections = 1

[tool.mypy]
    python_version = "3.11"
    mypy_path = []
    plugins = ["pydantic.mypy"]
    files = ["src/"]
    disable_error_code = ["no-untyped-def", "unused-ignore"]
    # minimal strictness settings
    no_implicit_reexport = true
    warn_unreachable = true
    warn_unused_configs = true
    warn_unused_ignores = true
    warn_redundant_casts = true
    disallow_incomplete_defs = true
    warn_no_return = true

[[tool.mypy.overrides]]
    module = [
        "matplotlib.*",
        "joblib.*",
        "sentence_transformers.*",
        "scipy.*",
        "openai_multi_tool_use_parallel_patch",
        "fsspec",
        "unidiff",
        "tree_sitter_languages",
        "tree_sitter",
        "google.cloud.*",
        "langfuse.*",
        "langfuse",
        "sklearn.dummy",
        "urllib3",
        "urllib",
        "urllib.*",
    ]
    ignore_missing_imports = true

[[tool.mypy.overrides]]
    module = ["google.*", "google.genai.*"]
    ignore_missing_imports = true
    disable_error_code = ["attr-defined", "import-untyped"]
